--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:server": "partykit dev --live --verbose -p 1999",
+    "dev": "vite --force",    
     "build": "tsc && vite build",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview",
-    "deploy-party": "partykit deploy --var PARTYKIT_HOST=http://the-synth-room.avnersorek.partykit.dev --var CORS_ORIGIN=https://the-synth-room.avner-sorek.workers.dev"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
